--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.3",
     "mongoose": "^5.9.21",
     "nodemon": "^2.0.3",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "express-session": "1.17.1"
   }
 }
