--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.3",
     "express": "~4.16.1",
+    "express-session": "1.17.1",
     "http": "0.0.1-security",
     "http-errors": "~1.6.3",
-    "ejs": "^3.1.3",
-    "mongoose": "^5.9.21",
-    "nodemon": "^2.0.3",
+    "mongoose": "^5.9.25",
     "morgan": "~1.9.1",
-    "express-session": "1.17.1"
+    "nodemon": "^2.0.3"
   }
 }
